BOARD18 2.0.0 Release Notes

Changes from 1.5.0  Release:

* Implemented Issue 1 - Request for an "undo" capability 
* Implemented Issue 20 - Associated spreadsheet URL capability
* Implemented Issue 47 - Rewrite JS to remove contextMenu API
* Implemented Issue 50 - Long Term Ergonomic Proposal
* Redesigned main menu for SnapMap and SnapMrk pages.
* Added "About BOARD18" option to all main menus.
* Fixed toggle on all main menus.
* Enhanced support for browser zoom, but issue 48 is still unresolved.
* Removed some leftover debugging code.
* Made many other minor tweaks and fixes.


BOARD18 1.5.0 Release Notes

Changes from 1.4.2  Release:

* Implemented issue 27 Phase 4 - board18Boxes.php.
* Added links between board18Boxes.php, board18Games.php and board18Players.php

BOARD18 1.4.2 Release Notes

Changes from 1.4.1  Release:

Fixed status swap bug in board18Misc.php

BOARD18 1.4.1 Release Notes

Changes from 1.4.0  Release:

Added 3 new PHP functions. 
They are linkGet, linkAdd and linkDel. 
Updated board18Misc page to support toggling the current game status.
Added link processing functions to board18Misc page.

BOARD18 1.4.0 Release Notes

Changes from 1.3.4 Release:

Updated game_link table. 
See http://wiki.board18.org/w/The_game_link_Table_Fix_for_release_1.4.x
Added aboutBoard18() function to board18com.js.

BOARD18 1.3.4 Release Notes

Changes from 1.3.3 Release:

Fixed switching between SnapMap and SnapMrk

BOARD18 1.3.3 Release Notes

Changes from 1.3.2 Release:

Put tray back into Market pages.

BOARD18 1.3.2 Release Notes

Changes from 1.3.1 Release:

Fixed Issue 49 - Tokens aren't on Map correctly in Snapshot view

BOARD18 1.3.1 Release Notes

Changes from 1.3.0 Release:
* More issue 10 fixes:
  Add an input box for mobile devices so they can use keyboard shortcuts
  Additional changes to the mobile input box, added versioning to the css files
  Add if you have a token/hex selected and you click outside of the selected 