@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
     <link rel="shortcut icon" href="images/favicon.ico" >
-    <link rel="stylesheet" href="style/board18com.css" />
+    <link rel="stylesheet" href="style/board18com-160521.css" />
   </head>
   <body>
     <div id="topofpage">
