@@ -16,7 +16,7 @@ A copy of this license can be found in the LICENSE.text file.
     <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
     <link rel="shortcut icon" href="images/favicon.ico" >
     <link rel="stylesheet" href="style/jquery.contextMenu.css" />
-    <link rel="stylesheet" href="style/board18com.css" />
+    <link rel="stylesheet" href="style/board18com-160521.css" />
     <script type="text/javascript" src="scripts/jquery.js">
     </script> 
     <script type="text/javascript" src="scripts/board18com.js">
