@@ -37,9 +37,9 @@ install -p -t ~/board18-$versionNo/utility/control 1830-REP02.json
 install -p -t ~/board18-$versionNo/utility/control 1870-REP03.json
 popd > /dev/null
 pushd images > /dev/null
-mkdir ~/board18-$versionNo/webroot/images/1830-REP01
+mkdir ~/board18-$versionNo/webroot/images/1830-REP02
 pushd 1830-REP01 > /dev/null
-install -p -t ~/board18-$versionNo/webroot/images/1830-REP01 *.*
+install -p -t ~/board18-$versionNo/webroot/images/1830-REP02 *.*
 popd > /dev/null
 mkdir ~/board18-$versionNo/webroot/images/1870-REP03
 pushd 1870-REP03 > /dev/null
