@@ -14,7 +14,7 @@ var BD18 = {};
 BD18.noteTimeout = null; // Used by doLogNote().
 BD18.welcomename = null; // Used by doLogNote().
 BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V2.0";
-BD18.version = "2.0.0";
+BD18.version = "2.1.0";
 
 /* Function setPage() adjusts the height and width
  * of rightofpage and the height of lefttofpage.
