@@ -36,8 +36,7 @@ html, body {
   overflow-y:scroll;
   left:0px;
   top:90px;
-  width:10%;
-  min-width: 135px;
+  width: 135px;
   height:400px;
   z-index:10;
 }
@@ -47,10 +46,9 @@ html, body {
   position:fixed;
   overflow-y:scroll;
   overflow-x:scroll;
-  right:0;
+  left:135px;
   height:400px;
   top:90px;
-  width:90%;
   z-index: 1;
 }
 
