@@ -1,3 +1,10 @@
+BOARD18 2.1.0 Release Notes
+
+Changes from 2.0.0  Release:
+* Removed enhanced support for browser zoom. See 
+  http://wiki.board18.org/w/Release_2.0.0_Issue
+* Made two other minor fixes.
+
 BOARD18 2.0.0 Release Notes
 
 Changes from 1.5.0  Release:
